@@ -99,7 +99,7 @@ std::ostream& Interpretation::print(
     it++;
     for(; it != bits.end(); ++it)
     {
-      o << sep << std::endl;
+      o << sep;
       printer.print(ID(ID::MAINKIND_ATOM | ID::SUBKIND_ATOM_ORDINARYG, *it));
     }
   }
